<resources>
    <string name="app_name">Uplift</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="adress">Adress\n</string>



    <string name="profile_image_description">User profile picture</string>
    <string name="full_name">John Doe</string>
    <string name="username">@johndoe</string>
    <string name="address">123 Main St</string>
    <string name="contact_information">555-123-4567</string>
    <string name="email">john.doe@example.com</string>
    <string name="edit_profile">Edit Profile</string>

</resources>