<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bluish"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:orientation="vertical"
        android:background="@drawable/profile_bg">

        <ImageButton
            android:id="@+id/profile_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_bg"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:src="@drawable/profile_picture" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black_bluish"
            android:background="@drawable/sign_up_borders"
            android:padding="12dp"
            android:layout_margin="10dp"
            android:text="@string/full_name"
            tools:text="John Doe" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black_bluish"
            android:background="@drawable/sign_up_borders"
            android:padding="12dp"
            android:layout_margin="10dp"
            android:text="@string/username" />

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black_bluish"
            android:background="@drawable/sign_up_borders"
            android:padding="12dp"
            android:layout_margin="10dp"
            android:text="@string/address" />

        <TextView
            android:id="@+id/contactInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black_bluish"
            android:background="@drawable/sign_up_borders"
            android:padding="12dp"
            android:layout_margin="10dp"
            android:text="@string/contact_information" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black_bluish"
            android:background="@drawable/sign_up_borders"
            android:padding="12dp"
            android:layout_margin="10dp"
            android:text="@string/email" />
        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="Edit Profile"
            android:textColor="@color/white"
            android:background="@color/soft_blue"

            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>